# cmake-cortexm-example

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: arm-gcc-toolchain.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  linker-script.ld  main.c  startup.c
src/platform/: CMakeLists.txt
src/platform/arch/: CMakeLists.txt
src/platform/arch/stm32/src/: CMakeLists.txt
src/platform/arch/stm32/src/f103/: CMakeLists.txt  hal_gpio.c  hal_system.c
src/platform/arch/stm32/src/f411/: CMakeLists.txt  hal_assert.h  hal_gpio.c  hal_system.c
src/platform/freertos/: CMakeLists.txt
src/platform/freertos/Config/: FreeRTOSConfig.h
src/platform/freertos/System/: sbrk.c
src/platform/hal/: CMakeLists.txt
src/platform/hal/include/: hal_gpio.h  hal_system.h
test/: CMakeLists.txt  test_example.c
test/support/crt/: linker_script.ld  startup.c
